# cursor-cosplay

./: .gitignore  CHANGELOG.md  LICENSE  README.md  find_primes.py  pyproject.toml
cursor_cosplay/: app.py  cli.py  models.py  service.py
tests/: test_cli.py  test_proxy.py  test_service.py
