[project]
name = "cursor-cosplay"
version = "0.1.0"
description = "OpenAI-compatible proxy for Cursor Agent CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Emtesseract", email = "hello@emtesseract.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=7.0.0",
  "httpx>=0.28.0",
  "ruff>=0.12.0",
]

[project.scripts]
cursor-cosplay = "cursor_cosplay.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cursor_cosplay*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["cursor_cosplay"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
